--- a/employee.html
+++ b/employee.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Employee - The Grinders</title>
-
+<link rel="stylesheet" href="./assets/css/cafe-theme.css">
   <!-- your css -->
   <link rel="stylesheet" href="./assets/css/cafe-theme.css">
 
