--- a/admin.html
+++ b/admin.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>The Grinders | Admin</title>
+  <link rel="stylesheet" href="./assets/css/cafe-theme.css">
   <style>
     body{margin:0;font-family:Arial,sans-serif;background:#0f0a07;color:#fff}
     header{
