--- a/employee.html
+++ b/employee.html
@@ -1,20 +1,21 @@
 <!doctype html>
-<html lang="en" dir="ltr">
+<html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Employee - The Grinders</title>
-<link rel="stylesheet" href="./assets/css/cafe-theme.css">
-  <!-- your css -->
-  <link rel="stylesheet" href="./assets/css/cafe-theme.css">
 
-  
+  <!-- ONE LINK ONLY (no duplicates) -->
+  <link rel="stylesheet" href="./assets/css/cafe-theme.css">
 </head>
-<body>
+
+<body class="page-employee">
   <div class="wrap">
     <div class="header">
-      <h1>Employee</h1>
-      <p>The Grinders — Attendance System</p>
+      <div>
+        <h1>Employee</h1>
+        <p class="muted">The Grinders — Attendance System</p>
+      </div>
     </div>
 
     <div class="grid">
@@ -70,4 +71,3 @@
   <script type="module" src="./js/employee.js"></script>
 </body>
 </html>
-
