Update login.html final form

--- a/login.html
+++ b/login.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>The Grinders - Login</title>
   <link rel="stylesheet" href="./assets/css/cafe-theme.css">
-  
 </head>
-<body>
+
+<body class="page-login">
   <div class="wrap">
     <div class="brand">
-      <div class="logo"></div>
+      <div class="logo" aria-hidden="true"></div>
       <div class="title">
         <h1>The Grinders</h1>
         <p>Attendance System · Secure Login</p>
@@ -27,7 +27,7 @@
       <button id="loginBtn" class="btn">تسجيل الدخول</button>
 
       <div id="msg" class="msg"></div>
-      <div class="hint">إذا طلع خطأ 400 غالبًا المشكلة من قيود API Key (راح أكتب لك الحل تحت)</div>
+      <div class="hint">إذا طلع خطأ 400 غالبًا المشكلة من قيود API Key.</div>
     </div>
   </div>
 
@@ -76,3 +76,4 @@
   </script>
 </body>
 </html>
+
